UI intro / header updates, Factored out DB connection into context.xml file. gradle stuff to deploy to AWS.